style.css
body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  margin: 0;
  font-family: Roboto, sans-serif;
  background-color: #1f1f1f;
  color: white;
}

a {
  text-decoration: none;
  color: white;
}

.removeBullet {
  list-style: none;
}

.h2 {
  margin: 0;
}

/* Header */
.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #393939;
  padding: 12px 24px;
}

.logo {
  font-size: 24px;
  font-weight: 800;
}

.header .removeBullet {
  display: flex;
  padding: 0;
  gap: 20px;
}

/* Body */
.body {
  display: flex;
  flex: 1;
  flex-wrap: wrap;
}

/* Sidebar */
.sidebar {
  display: flex;
  flex-direction: column;
  flex: 1 1;
  min-width: 270px;
  align-self: flex-start;
  align-items: center;
  background: #1f1f1f;
  padding: 50px 50px;
}

.sidebar img {
  object-fit: cover;
  object-position: top;
  border: 1px solid #6a6a6a;
  border-radius: 50%;
  padding: 5px;
  height: 200px;
  width: 200px;
}

.h1 {
  font-size: 40px;
  margin: 0;
}
.position {
  margin: 0;
}

.sidebar a {
  display: flex;
  flex-direction: column;
  text-align: center;
}

.sidebar i {
  font-size: 34px;
}

.sidebar .contacts {
  display: flex;
  gap: 24px;
  padding: 0;
  padding-top: 20px;
  padding-bottom: 50px;
}

.sidebar-card .skills {
  display: flex;
  flex-direction: column;
  margin: 2px 0;
}


/* Main Content */
.main-content {
  display: flex;
  flex-direction: column;
  flex: 2 0 500px;
  min-width: 500px;
  flex-wrap: wrap;
  background-color: #515151;
  gap: 20px;
  padding: 20px 0;
}

.card {
  display: flex;
  flex-direction: column;
  flex: 1;
  background-color: #1f1f1f;
  padding: 10px 10px;
  margin: 0 20px;
}

.card .row {
  display: flex;
  justify-content: space-between;
}

.line {
  border: 1px solid #a6a6a6;
  margin: 8px 0;
}

.card .summary {
  margin: 0;
  margin-top: 8px;
}

.card p{
  margin: 0;
}

/* Footer */
.footer {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 10px;
  background-color: #393939;
}

